--- a/Branch.App/Areas/Halo4/Views/ServiceRecord/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/ServiceRecord/Index.cshtml
@@ -9,7 +9,7 @@
 	ViewBag.Template = "halo4_service_record";
 	ViewBag.CurrentH4Page = Enums.Pages.ServiceRecord;
 	var serviceRecord = @Model.ServiceRecord;
-	var gameHistory = @Model.GameHistory;
+	var gameHistory = @Model.RecentWarGamesHistory;
 }
 
 <div class="bs-branch-section overview">
