--- a/Branch.App/Content/Styles/Halo4/_home.scss
+++ b/Branch.App/Content/Styles/Halo4/_home.scss
@@ -12,6 +12,9 @@ body.halo4 {
 		-o-background-size: cover; 
 		background-size: cover;
 
+		-webkit-filter: contrast(150%);
+		filter: contrast(150%);
+
 		@media (max-width: 767px) {
 			height: 350px;
 		}
