--- a/Branch.App/Views/Shared/Footer.cshtml
+++ b/Branch.App/Views/Shared/Footer.cshtml
@@ -28,7 +28,9 @@
 					<li>·</li>
 					<li><a class="@linkType" href="http://onyx.io/" target="_blank">Onyx</a></li>
 					<li>·</li>
-					<li><a class="@linkType" href="#" target="_blank">Blog</a></li>
+					<li>
+						@Html.ActionLink("Blog", "Index", "Blog", new { area = "" }, null)
+					</li>
 				</ul>
 				<ul class="footer-links">
 					<li>
