on that year thing

--- a/Branch.App/Views/Shared/Footer.cshtml
+++ b/Branch.App/Views/Shared/Footer.cshtml
@@ -16,7 +16,7 @@
 				<p>Developed by <a class="@linkType" href="http://twitter.com/alexerax" target="_blank">&#64;alexerax</a>.</p>
 				<p>Developed in C# | ASP.NET on Windows Azure</p>
 				<p>Code licensed under the <a class="@linkType" href="http://www.dbad-license.org/" target="_blank">Don't Be A Dick</a> Public License.</p>
-				<p>&copy; @DateTime.Now.Year - Branch</p>
+				<p>&copy; 2013-@DateTime.Now.Year - Branch</p>
 				<ul class="footer-links">
 					<li><a class="@linkType" href="https://github.com/TheTree/Branch" target="_blank">Github</a></li>
 					<li>·</li>
