--- a/Branch.App/Areas/Halo4/Views/Specializations/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Specializations/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Branch.App.Areas.Halo4.Models
 @using Branch.App.Helpers.Razor
 @using Branch.App.Helpers.Razor.Halo4
+@using Branch.Models.Services.Branch
 @using Enums = Branch.App.Areas.Halo4.Models.Enums
 @model SpecializationsViewModel
 @{
-	ViewBag.Title = string.Format("{0}'s Halo 4 Specializations", BranchHelpers.CheckGamertagPrivacy(@Model.ServiceRecord.Gamertag));
+	ViewBag.Title = string.Format("{0}'s Halo 4 Specializations", Model.PublicGamertag);
 	Layout = "~/Areas/Halo4/Views/Shared/_Layout.cshtml";
 	ViewBag.Template = "halo4_specializations";
 	ViewBag.CurrentH4Page = Enums.Pages.Specializations;
