--- a/Branch.App/Views/Search/Partials/Halo4ServiceRecord.cshtml
+++ b/Branch.App/Views/Search/Partials/Halo4ServiceRecord.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Branch.App.Helpers.Razor
 @using Branch.App.Helpers.Razor.Halo4
+@using Branch.Models.Services.Branch
 @using Branch.Models.Services.Halo4._343.DataModels
 @model Branch.Models.Services.Halo4._343.Responses.ServiceRecord
 @{
@@ -13,13 +14,13 @@
 
 <div class="col-md-6 entry">
 	<a class="nope" 
-	   href="@Url.RouteUrl("Halo4_ServiceRecord", new { gamertag = BranchHelpers.CheckGamertagPrivacy(Model.Gamertag) })">
+	   href="@Url.RouteUrl("Halo4_ServiceRecord", new { gamertag = BranchHelpers.CheckGamerIdPrivacy(Model.Gamertag, GamerId.X360XblGamertag) })">
 		<div class="spartan-image" 
 			 style="background-image: url('@GeneralHelpers.GetPlayerModelUrl(Model.Gamertag, "large", "posed")')"></div>
 		<div class="mask"></div>
 		<div class="text-container">
 			<h2>
-				@BranchHelpers.CheckGamertagPrivacy(Model.Gamertag)
+				@BranchHelpers.CheckGamerIdPrivacy(Model.Gamertag, GamerId.X360XblGamertag)
 			</h2>
 			<h3>
 				@Model.ServiceTag
