--- a/Branch.App/Areas/Halo4/Views/History/WarGames.cshtml
+++ b/Branch.App/Areas/Halo4/Views/History/WarGames.cshtml
@@ -82,7 +82,7 @@
 	else
 	{
 		<h6>
-			There are no more Multiplaer Games in <strong>@Model.PublicGamertag's</strong> Game History
+			There are no more Multiplayer Games in <strong>@Model.PublicGamertag's</strong> Game History
 		</h6>
 	}
 
