--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -1,8 +1,8 @@
-﻿<a class="sr-only">Skip navigation</a>
-<header class="navbar navbar-static-top" role="banner">
-	<div class="container">
+﻿<nav class="navbar navbar-static-top" role="navigation">
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -10,7 +10,9 @@
 			</button>
 			@Html.ActionLink("Branch", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 		</div>
-		<nav class="collapse navbar-collapse" role="navigation">
+
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li class="">
 					@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)
@@ -48,16 +50,12 @@
 					@Html.ActionLink("About", "Index", "About", new { area = "" }, null)
 				</li>
 			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li>
-					@using (Html.BeginForm("Index", "Search", new { area = "" }, FormMethod.Get, new { @class = "navbar-form" }))
-					{
-						<div class="form-group">
-							<input type="text" name="q" placeholder="Search Gamertag" class="form-control" value="">
-						</div>
-					}
-				</li>
-			</ul>
-		</nav>
-	</div>
-</header>
+			@using (Html.BeginForm("Index", "Search", new { area = "" }, FormMethod.Get, new { @role = "search", @class = "navbar-form navbar-right" }))
+			{
+				<div class="form-group">
+					<input type="text" name="q" placeholder="Search Gamertag" class="form-control" value="">
+				</div>
+			}
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
+</nav>
