--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -1,6 +1,5 @@
 ﻿<nav class="navbar navbar-static-top" role="navigation">
 	<div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span>
@@ -11,7 +10,6 @@
 			@Html.ActionLink("Branch", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
 		</div>
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li class="">
@@ -56,6 +54,6 @@
 					<input type="text" name="q" placeholder="Search Gamertag" class="form-control" value="">
 				</div>
 			}
-		</div><!-- /.navbar-collapse -->
-	</div><!-- /.container-fluid -->
+		</div>
+	</div>
 </nav>
