--- a/Branch.App/Views/About/Index.cshtml
+++ b/Branch.App/Views/About/Index.cshtml
@@ -70,7 +70,7 @@
 						 src="https://0.gravatar.com/avatar/400f92af64c19671fd2f19cfc0e048a5?d=https%3A%2F%2Fidenticons.github.com%2F207b857e5b229287a477f210de4947c5.png&amp;s=200">
 					<div class="twitter" style="width: 110px; margin: 0 auto; margin-top: 20px;">
 						<iframe title="Twitter Follow Button" class="twitter-follow-button twitter-follow-button" id="twitter-widget-0" 
-								src="http://platform.twitter.com/widgets/follow_button.1380844203.html#_=1381083245151&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=alexerax&amp;show_count=false&amp;show_screen_name=true&amp;size=m" frameborder="0" scrolling="no" style="width: 139px; height: 20px;" allowtransparency="true" data-twttr-rendered="true"></iframe>
+								src="http://platform.twitter.com/widgets/follow_button.1380844203.html#_=1381083245151&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=0xdeafcafe&amp;show_count=false&amp;show_screen_name=true&amp;size=m" frameborder="0" scrolling="no" style="width: 139px; height: 20px;" allowtransparency="true" data-twttr-rendered="true"></iframe>
 					</div>
 				</div>
 			</div>
