--- a/Branch.App/Views/Shared/Footer.cshtml
+++ b/Branch.App/Views/Shared/Footer.cshtml
@@ -13,8 +13,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-10">
-				<p>Developed by <a class="@linkType" href="http://twitter.com/alexerax" target="_blank">&#64;alexerax</a>.</p>
-				<p>Developed in C# | ASP.NET on Windows Azure</p>
+				<p>Developed by <a class="@linkType" href="http://twitter.com/0xdeafcafe" target="_blank">&#64;0xdeafcafe</a></p>
+				<p>Developed in C# | Running on Windows Azure</p>
 				<p>Code licensed under the <a class="@linkType" href="http://www.dbad-license.org/" target="_blank">Don't Be A Dick</a> Public License.</p>
 				<p>&copy; 2013-@DateTime.Now.Year - Branch</p>
 				<ul class="footer-links">
@@ -22,23 +22,23 @@
 					<li>·</li>
 					<li><a class="@linkType" href="http://xboxchaos.com/" target="_blank">Xbox Chaos</a></li>
 					<li>·</li>
-					<li><a class="@linkType" href="http://halo.reddit.com/" class="" target="_blank">r/halo</a></li>
+					<li><a class="@linkType" href="http://halo.reddit.com/" target="_blank">r/halo</a></li>
 					<li>·</li>
 					<li><a class="@linkType" href="http://unscwarfare.com/" target="_blank">UNSC Warfare</a></li>
 					<li>·</li>
 					<li><a class="@linkType" href="http://onyx.io/" target="_blank">Onyx</a></li>
 					<li>·</li>
 					<li>
-						@Html.ActionLink("Blog", "Index", "Blog", new { area = "" }, null)
+						@Html.ActionLink("Blog", "Index", "Blog", new { area = "" }, new { @class = linkType })
 					</li>
 				</ul>
-				<ul class="footer-links">
+				<ul class="footer-links hidden">
 					<li>
-						@Html.ActionLink("Privacy Policy", "Index", "Home", new { }, new { @class = linkType })
+						@Html.ActionLink("Privacy Policy", "Index", "Home", new { area = "" }, new { @class = linkType })
 					</li>
 					<li>·</li>
 					<li>
-						@Html.ActionLink("Terms", "Index", "Home", new { }, new { @class = linkType })
+						@Html.ActionLink("Terms", "Index", "Home", new { area = "" }, new { @class = linkType })
 					</li>
 				</ul>
 			</div>
