--- a/Branch.App/Areas/Halo4/Views/Shared/HeaderServiceRecord.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Shared/HeaderServiceRecord.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Branch.App.Helpers.Razor
 @using Branch.App.Helpers.Razor.Halo4
+@using Branch.App.Models
 @using Branch.Core.Game.Halo4.Models._343.DataModels
 @using Branch.Extenders
+@using Game = Branch.App.Models.Enums.Game
 @model Branch.App.Areas.Halo4.Models.Base
 @{
 	var serviceRecord = Model.ServiceRecord;
@@ -16,6 +18,9 @@
 <div class="bs-header halo4-header" id="content" 
 	 style="background-image: url('@(mapBackDrop ?? "")');">
 	<div class="mask">
+		<!-- Render switcher -->
+		@Html.Partial("GameSwitcher", new GameSwitcherViewModel(Model.PublicGamertag, Game.Halo4))
+		
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9">
@@ -53,48 +58,48 @@
 							<img class="hidden-xs" alt="" src="@GeneralHelpers.GetRawAssetUrl(@serviceRecord.RankImageUrl)" />
 
 							@{
-							CommonModels.Specialization activeSpecialization = null;
-							foreach (var specialization in serviceRecord.Specializations.Where(specialization => specialization.IsCurrent))
-							{
-								activeSpecialization = specialization;
-							}
-							if (activeSpecialization == null)
-							{
-								activeSpecialization = serviceRecord.Specializations[0];
-							}
+								CommonModels.Specialization activeSpecialization = null;
+								foreach (var specialization in serviceRecord.Specializations.Where(specialization => specialization.IsCurrent))
+								{
+									activeSpecialization = specialization;
+								}
+								if (activeSpecialization == null)
+								{
+									activeSpecialization = serviceRecord.Specializations[0];
+								}
 
-							if (serviceRecord.NextRankId == 0 || Math.Abs(activeSpecialization.PercentComplete - 1.0) < 0.09)
-							{
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-										<span class="progress-bar-indicator">100% Complete</span>
-										<span class="sr-only">100% Complete</span>
+								if (serviceRecord.NextRankId == 0 || Math.Abs(activeSpecialization.PercentComplete - 1.0) < 0.09)
+								{
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+											<span class="progress-bar-indicator">100% Complete</span>
+											<span class="sr-only">100% Complete</span>
+										</div>
 									</div>
-								</div>
-								<div class="XP">
-									<div class="left lower-bound">@BranchHelpers.NumberWithDelimiter(@serviceRecord.RankStartXp) Xp</div>
-									<div class="right upper-bound"></div>
-									<div class="clearfix"></div>
-								</div>
-							}
-							else
-							{
-								float a = (serviceRecord.Xp - serviceRecord.RankStartXp);
-								float b = (serviceRecord.NextRankStartXp - serviceRecord.RankStartXp);
-								var percentage = ((a / b) * 100);
+									<div class="XP">
+										<div class="left lower-bound">@BranchHelpers.NumberWithDelimiter(@serviceRecord.RankStartXp) Xp</div>
+										<div class="right upper-bound"></div>
+										<div class="clearfix"></div>
+									</div>
+								}
+								else
+								{
+									float a = (serviceRecord.Xp - serviceRecord.RankStartXp);
+									float b = (serviceRecord.NextRankStartXp - serviceRecord.RankStartXp);
+									var percentage = ((a / b) * 100);
 
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: @percentage%">
-										<span class="progress-bar-indicator">@percentage % (@BranchHelpers.NumberWithDelimiter(@serviceRecord.Xp) Xp)</span>
-										<span class="sr-only">@percentage % (@BranchHelpers.NumberWithDelimiter(@serviceRecord.Xp) Xp)</span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: @percentage%">
+											<span class="progress-bar-indicator">@percentage % (@BranchHelpers.NumberWithDelimiter(@serviceRecord.Xp) Xp)</span>
+											<span class="sr-only">@percentage % (@BranchHelpers.NumberWithDelimiter(@serviceRecord.Xp) Xp)</span>
+										</div>
 									</div>
-								</div>
-								<div class="XP">
-									<div class="left lower-bound">@BranchHelpers.NumberWithDelimiter(@serviceRecord.RankStartXp) Xp</div>
-									<div class="right upper-bound">@BranchHelpers.NumberWithDelimiter((int)@serviceRecord.NextRankStartXp) Xp</div>
-									<div class="clearfix"></div>
-								</div>
-							}
+									<div class="XP">
+										<div class="left lower-bound">@BranchHelpers.NumberWithDelimiter(@serviceRecord.RankStartXp) Xp</div>
+										<div class="right upper-bound">@BranchHelpers.NumberWithDelimiter((int)@serviceRecord.NextRankStartXp) Xp</div>
+										<div class="clearfix"></div>
+									</div>
+								}
 							}
 							<img class="visible-xs" alt="" src="@GeneralHelpers.GetRawAssetUrl(@serviceRecord.RankImageUrl)" />
 						</div>
