--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -16,6 +16,14 @@
 					@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)
 				</li>
 				<li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Halo: Reach <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li>
+							@Html.ActionLink("Halo: Reach", "Index", "Home", new { area = "Reach" }, null)
+						</li>
+					</ul>
+				</li>
+				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">Halo 4 <b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li>
